--- a/pocketbook.html
+++ b/pocketbook.html
@@ -85,11 +85,14 @@
 </main>
 
 <footer>
-  <p>© Alex Schnell for PA-3 | Built openly by the community</p>
-  <p>
-    <a href="https://github.com/alexschnellpa3/alexschnellpa3.github.io/edit/main/pocketbook.html" style="font-size: 0.85em; color: #666;">
+  <p style="font-size: 0.85rem;">
+    © Alex Schnell for PA-3 | Built openly by the community
+  </p>
+  <a href="https://github.com/alexschnellpa3/alexschnellpa3.github.io/edit/main/pocketbook.html" style="font-size: 0.85em; color: #666;">
       Suggest an edit to this page on GitHub
-    </a>
+  </a>
+  <p style="font-size: 0.8rem; color: #666;">
+    Paid for by Alex Schnell for PA-3.
   </p>
 </footer>
 
