--- a/constitution.html
+++ b/constitution.html
@@ -10,7 +10,7 @@
   
   <meta property="og:title" content="The Constitution - Alex Schnell for PA-3">
   <meta property="og:description" content="Federal programs must be tied to enumerated powers, not political convenience.">
-  <meta property="og:image" content="https://alexschnellpa3.com/images/capitol.jpg">
+  <meta property="og:image" content="https://alexschnellpa3.com/images/alex-schnell-placeholder.jpg">
   <meta property="og:url" content="https://alexschnellpa3.com">
   <meta name="twitter:card" content="summary_large_image">
 
@@ -31,7 +31,7 @@
 <main>
 
 <section>
-  <img src="images/capitol.jpg" alt="United States Capitol">
+  <img src="images/alex-schnell-placeholder.jpg" alt="United States Capitol">
   <h2>Enumerated Powers, Not Unlimited Authority</h2>
 
   <p>
