--- a/constitution.html
+++ b/constitution.html
@@ -31,7 +31,7 @@
 <main>
 
 <section>
-  <img src="images/alex-schnell-placeholder.jpg" alt="United States Capitol">
+  <img src="images/alex-schnell-placeholder.jpg" alt="Campaign Image">
   <h2>Enumerated Powers, Not Unlimited Authority</h2>
 
   <p>
