--- a/grassroots.html
+++ b/grassroots.html
@@ -10,7 +10,7 @@
   
   <meta property="og:title" content="Grassroots Campaign - Alex Schnell for PA-3">
   <meta property="og:description" content="A bottom-up campaign where supporters can propose improvements and corrections directly.">
-  <meta property="og:image" content="https://alexschnellpa3.com/images/rally1.jpg">
+  <meta property="og:image" content="https://alexschnellpa3.com/images/alex-schnell-placeholder.jpg">
   <meta property="og:url" content="https://alexschnellpa3.com">
   <meta name="twitter:card" content="summary_large_image">
 
@@ -31,7 +31,7 @@
 <main>
 
 <section>
-  <img src="images/rally1.jpg" alt="Community rally in PA-3">
+  <img src="images/alex-schnell-placeholder.jpg" alt="Campaign Image">
   <h2>Bottom-Up Representation</h2>
 
   <p>
