--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   
   <meta property="og:title" content="Alex Schnell for PA-3">
   <meta property="og:description" content="A grassroots, constitutional campaign built openly by the community.">
-  <meta property="og:image" content="https://alexschnellpa3.com/images/community.jpg">
+  <meta property="og:image" content="https://alexschnellpa3.com/images/alex-schnell-placeholder.jpg">
   <meta property="og:url" content="https://alexschnellpa3.com">
   <meta name="twitter:card" content="summary_large_image">
 
@@ -31,7 +31,7 @@
 <main>
 
 <section>
-  <img src="images/community.jpg" alt="Alex Schnell with community members in PA-3">
+  <img src="images/alex-schnell-placeholder.jpg" alt="Campaign Image">
   <h2>The Person Behind @AlexSchnellPA3</h2>
 
   <p>
