--- a/pocketbook.html
+++ b/pocketbook.html
@@ -10,7 +10,7 @@
   
   <meta property="og:title" content="Pocketbook Issues - Alex Schnell for PA-3">
   <meta property="og:description" content="Focusing on issues that determine whether people have a real say in how they are governed.">
-  <meta property="og:image" content="https://alexschnellpa3.com/images/community.jpg">
+  <meta property="og:image" content="https://alexschnellpa3.com/images/alex-schnell-placeholder.jpg">
   <meta property="og:url" content="https://alexschnellpa3.com">
   <meta name="twitter:card" content="summary_large_image">
 
