--- a/constitution.html
+++ b/constitution.html
@@ -10,7 +10,7 @@
   
   <meta property="og:title" content="The Constitution - Alex Schnell for PA-3">
   <meta property="og:description" content="Federal programs must be tied to enumerated powers, not political convenience.">
-  <meta property="og:image" content="https://alexschnellpa3.com/images/alex-schnell-placeholder.jpg">
+  <meta property="og:image" content="https://alexschnellpa3.com/images/us-constitution.jpg">
   <meta property="og:url" content="https://alexschnellpa3.com">
   <meta name="twitter:card" content="summary_large_image">
 
@@ -31,13 +31,14 @@
 <main>
 
 <section>
-  <img src="images/alex-schnell-placeholder.jpg" alt="Campaign Image">
-  <h2>Enumerated Powers, Not Unlimited Authority</h2>
+  <img src="images/us-constitution.jpg" alt="Campaign Image">
+  <h2>Enumerated Powers and Constitutional Responsibility</h2>
 
   <p>
-    The federal government is one of limited and defined powers.
-    Its authority comes from Article I, Section 8 of the Constitution,
-    which lists what Congress is allowed to do.
+    The Constitution establishes a federal government with specific and limited authority.
+    Article I, Section 8 outlines the responsibilities of Congress and provides the framework
+    for federal action. These powers form the basis of lawful governance and guide how federal
+    programs should operate.
   </p>
 
   <ol>
@@ -55,19 +56,35 @@
     <li>Declare war</li>
     <li>Raise and support armies and navies</li>
     <li>Call forth the militia</li>
-    <li>Make laws necessary and proper to execute these powers</li>
+    <li>Make laws necessary and proper to carry out these responsibilities</li>
   </ol>
 
   <p>
-    There is no standalone grant of power to govern every aspect of life.
-    The phrase “general welfare” does not create unlimited authority.
-    Federal programs must be tied to enumerated powers, not political convenience.
+    These powers provide a clear structure for federal action. They also set boundaries.
+    Federal programs should be connected to the responsibilities listed in the Constitution.
+    This approach strengthens accountability and helps prevent the expansion of authority
+    into areas that belong to states, local communities, or individuals.
+  </p>
+
+  <p>
+    I support a constitutional approach that respects these limits. A government that follows
+    its defined responsibilities is more predictable, more transparent, and more responsive
+    to the people it serves. This approach encourages careful budgeting, clear priorities,
+    and a stronger focus on national responsibilities such as defense, interstate commerce,
+    and the protection of individual rights.
+  </p>
+
+  <p>
+    My goal is to promote policies that reflect this framework. I support legislation that
+    aligns with the powers listed in the Constitution and I support efforts to review federal
+    programs that fall outside this structure. A clear constitutional foundation helps create
+    a government that is stable, efficient, and respectful of the people who grant it authority.
   </p>
 </section>
 
 <section class="callout">
-  <strong>The Constitution is a limit on government power, not a suggestion.</strong><br>
-  Constitutional government begins with restraint.
+  <strong>The Constitution provides structure and responsibility for federal power.</strong><br>
+  A stable government begins with clear limits and consistent application of the law.
 </section>
 
 </main>
