--- a/grassroots.html
+++ b/grassroots.html
@@ -10,7 +10,7 @@
   
   <meta property="og:title" content="Grassroots Campaign - Alex Schnell for PA-3">
   <meta property="og:description" content="A bottom-up campaign where supporters can propose improvements and corrections directly.">
-  <meta property="og:image" content="https://alexschnellpa3.com/images/alex-schnell-placeholder.jpg">
+  <meta property="og:image" content="https://alexschnellpa3.com/images/grassroots-movement.jpg">
   <meta property="og:url" content="https://alexschnellpa3.com">
   <meta name="twitter:card" content="summary_large_image">
 
@@ -31,41 +31,54 @@
 <main>
 
 <section>
-  <img src="images/alex-schnell-placeholder.jpg" alt="Campaign Image">
+  <img src="images/grassroots-movement.jpg" alt="Campaign Image">
   <h2>Bottom-Up Representation</h2>
 
   <p>
-    This campaign rejects the traditional top-down model.
-    It is built from the community up, not from consultants down.
+    This campaign is built on direct involvement from the people who live in the district.
+    I believe representation should grow from the community and reflect the priorities
+    of the residents who experience the results of federal decisions every day.
   </p>
 
   <p>
-    The website lives on GitHub so supporters can propose improvements,
-    corrections, and additions. Every change is reviewed.
+    The website is hosted on GitHub to support open participation. Anyone can propose
+    improvements or corrections. Every suggestion is reviewed before it is added.
+    This structure encourages transparency and invites residents to take part in the
+    work of building a stronger district.
   </p>
 </section>
 
 <section class="callout">
-  <strong>This campaign belongs to PA-3, not Washington.</strong><br>
-  Built openly. Governed honestly.
+  <strong>This campaign belongs to PA-3.</strong><br>
+  Built openly. Reviewed carefully. Focused on the community.
 </section>
 
 <section>
-  <h2>Republican in Name, Independent in Spirit</h2>
+  <h2>My Approach to Party Alignment</h2>
   <p>
-    I am a Constitutionalist and do not align neatly with either party.
-    Republicans offered the clearest path for a grassroots run,
-    while Democrats already had multiple candidates.
+    I consider myself a Constitutionalist. My views do not fit neatly within either
+    major party. To run a community-focused campaign, I need a practical path that
+    allows me to meet the legal requirements for ballot access and reach voters
+    across the district. The Republican ballot line provides that path in this
+    election cycle. My commitment remains centered on the people of the district
+    and on the principles that guide my work.
   </p>
 </section>
 
 <section>
   <h2>How You Can Help</h2>
+  <p>
+    A grassroots campaign depends on steady involvement from residents. Every
+    conversation and every connection strengthens the effort to build a more
+    responsive form of representation.
+  </p>
+
   <ul>
     <li>Attend community meetings</li>
-    <li>Talk with neighbors</li>
-    <li>Propose edits or additions to this site</li>
-    <li>Volunteer locally</li>
+    <li>Talk with neighbors about local concerns</li>
+    <li>Share ideas or suggestions through the contact page</li>
+    <li>Volunteer with local organizations or civic groups</li>
+	<li>Get creative!</li>
   </ul>
 </section>
 
