--- a/index.html
+++ b/index.html
@@ -32,23 +32,56 @@
 
 <section>
   <img src="images/alex-schnell-placeholder.jpg" alt="Campaign Image">
-  <h2>The Person Behind @AlexSchnellPA3</h2>
+  <h2>The Person Behind @AlexSchnellPA3 on X</h2>
 
   <p>
-    Hello, everyone. I’m Alex Schnell, a committee person for Philadelphia’s 9th Ward,
-    and I’m exploring a run for Congress to represent Pennsylvania’s 3rd District.
+    Hello, everyone. I am Alex Schnell, a member of the Philadelphia 9th Ward Republican
+    Committee, and I am exploring a grassroots run for Congress in Pennsylvania’s
+    3rd District. My interest in public service grew from years of community involvement
+    and from a professional background focused on analysis, problem solving, and
+    practical results.
   </p>
 
   <p>
-    I’m tired of seeing our communities divided by political labels that don’t reflect
-    how people actually live. Everywhere I go, people care about the same things:
-    safe neighborhoods, honest government, strong schools, and leaders who show up.
+    My interest in technology began early in life through projects I worked on with my
+    father. We built weather stations, created videos with green screen effects, and
+    experimented with robotics and circuitry. These experiences encouraged me to pursue
+    technical work and shaped the way I approach complex problems.
   </p>
 
   <p>
-    I went to rallies across the political spectrum not to pick sides, but to listen.
-    I spoke with Democrats, Republicans, and independents while canvassing and in daily life.
-    What I found was unity being drowned out by a system that benefits from division.
+    In high school, I assisted with the IT Lab and Lab Manager programs and earned two
+    Microsoft certifications after graduation. During college, I focused on gaining
+    practical experience. I earned a SAS Certificate in Business Intelligence and
+    Analytics and a Leadership Certificate from the Oskin Leadership Institute. I
+    completed internships, including one in the office of my Congressman, and I served
+    as President of Widener’s foreign language honor society and Treasurer of the
+    Catholic club.
+  </p>
+
+  <p>
+    After college, I spent four years at Breakaway Technologies. When that position
+    ended, I used the skills I had gained to build a custom database for stock market
+    forecasting. I also became more involved in public service and was elected as a
+    local Committeeperson. This role strengthened my interest in government and
+    community engagement and helped shape my decision to explore a run for Congress.
+  </p>
+
+  <p>
+    I currently work as a Business Analyst through a partnership between my company
+    and the Philadelphia Parking Authority. My responsibilities involve improving
+    processes, supporting operations, and helping the organization function
+    efficiently. These experiences have reinforced my belief that effective
+    representation requires clear communication, careful analysis, and consistent
+    engagement with the people you serve.
+  </p>
+
+  <p>
+    I consider myself a Constitutionalist. I value limited government, individual
+    liberty, and accountability. I do not align fully with either major party. I am
+    choosing the path that allows a community-focused campaign to function effectively
+    and reach the people who live here. My goal is to build a campaign that reflects
+    the district and encourages residents to take part in shaping their representation.
   </p>
 </section>
 
@@ -59,18 +92,19 @@
 </section>
 
 <section>
-  <h2>Why I’m Running</h2>
+  <h2>Why I Am Running</h2>
 
   <p>
-    Too often, representatives govern from Washington instead of representing their districts.
-    They sit far away, make rules for the entire country, and rarely return to the communities
-    they’re supposed to serve.
+    Many residents feel that their concerns do not reach Washington. They want a
+    representative who spends time in the district, listens to local voices, and
+    understands the issues that affect daily life. I believe effective representation
+    begins with consistent engagement in the community.
   </p>
 
   <p>
-    I believe representation should be bottom-up. Community first. Local voices matter.
-    I focus on what I call pocketbook issues because they give people real influence
-    over their government, regardless of party.
+    My goal is to build a campaign that grows from the ground up. Community first.
+    Local involvement. Clear communication. These principles guide my approach and
+    shape the work I hope to do on behalf of the district.
   </p>
 </section>
 
