--- a/grassroots.html
+++ b/grassroots.html
@@ -25,13 +25,14 @@
     <a href="constitution.html">The Constitution</a>
     <a href="pocketbook.html">Pocketbook Issues</a>
     <a href="grassroots.html">Grassroots Campaign</a>
+	<a href="twitter.html">Live Updates</a>
   </nav>
 </header>
 
 <main>
 
 <section>
-  <img src="images/grassroots-movement.jpg" alt="Campaign Image">
+  <img src="images/grassroots-movement.jpg" alt="Grassroots Image">
   <h2>Bottom-Up Representation</h2>
 
   <p>
