--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     <a href="constitution.html">The Constitution</a>
     <a href="pocketbook.html">Pocketbook Issues</a>
     <a href="grassroots.html">Grassroots Campaign</a>
+	<a href="twitter.html">Live Updates</a>
   </nav>
 </header>
 
