--- a/constitution.html
+++ b/constitution.html
@@ -25,13 +25,14 @@
     <a href="constitution.html">The Constitution</a>
     <a href="pocketbook.html">Pocketbook Issues</a>
     <a href="grassroots.html">Grassroots Campaign</a>
+	<a href="twitter.html">Live Updates</a>
   </nav>
 </header>
 
 <main>
 
 <section>
-  <img src="images/us-constitution.jpg" alt="Campaign Image">
+  <img src="images/us-constitution.jpg" alt="US Constitution Image">
   <h2>Enumerated Powers and Constitutional Responsibility</h2>
 
   <p>
