--- a/twitter.html
+++ b/twitter.html
@@ -26,6 +26,7 @@
     <a href="pocketbook.html">Pocketbook Issues</a>
     <a href="grassroots.html">Grassroots Campaign</a>
     <a href="twitter.html">Live Updates</a>
+    <a href="donate.html">Donate</a>
   </nav>
 </header>
 
