--- a/constitution.html
+++ b/constitution.html
@@ -25,7 +25,8 @@
     <a href="constitution.html">The Constitution</a>
     <a href="pocketbook.html">Pocketbook Issues</a>
     <a href="grassroots.html">Grassroots Campaign</a>
-	<a href="twitter.html">Live Updates</a>
+    <a href="twitter.html">Live Updates</a>
+    <a href="donate.html">Donate</a>
   </nav>
 </header>
 
