--- a/constitution.html
+++ b/constitution.html
@@ -27,6 +27,7 @@
     <a href="grassroots.html">Grassroots Campaign</a>
     <a href="twitter.html">Live Updates</a>
     <a href="donate.html">Donate</a>
+	<a href="contact.html">Contact</a>
   </nav>
 </header>
 
@@ -34,13 +35,27 @@
 
 <section>
   <img src="images/us-constitution.jpg" alt="US Constitution Image">
-  <h2>Enumerated Powers and Constitutional Responsibility</h2>
+  <h2>A Constitutional Framework for Representation</h2>
 
   <p>
-    The Constitution establishes a federal government with specific and limited authority.
-    Article I, Section 8 outlines the responsibilities of Congress and provides the framework
-    for federal action. These powers form the basis of lawful governance and guide how federal
-    programs should operate.
+    I consider myself a Constitutionalist. I believe the federal government functions best when it operates within clearly defined limits and responsibilities.
+  </p>
+
+  <p>
+    The Constitution establishes a government with specific and enumerated powers. When those limits are respected, government becomes more predictable, more transparent, and more accountable to the people it serves.
+  </p>
+</section>
+
+<section class="callout">
+  <strong>The Constitution provides structure and responsibility for federal power.</strong><br>
+  A stable government begins with clear boundaries and consistent application of the law.
+</section>
+
+<section>
+  <h2>Article I, Section 8</h2>
+
+  <p>
+	The Constitution outlines the responsibilities of Congress in Article I, Section 8. These powers form the basis of lawful federal action:
   </p>
 
   <ol>
@@ -62,31 +77,20 @@
   </ol>
 
   <p>
-    These powers provide a clear structure for federal action. They also set boundaries.
-    Federal programs should be connected to the responsibilities listed in the Constitution.
-    This approach strengthens accountability and helps prevent the expansion of authority
-    into areas that belong to states, local communities, or individuals.
-  </p>
-
-  <p>
-    I support a constitutional approach that respects these limits. A government that follows
-    its defined responsibilities is more predictable, more transparent, and more responsive
-    to the people it serves. This approach encourages careful budgeting, clear priorities,
-    and a stronger focus on national responsibilities such as defense, interstate commerce,
-    and the protection of individual rights.
-  </p>
-
-  <p>
-    My goal is to promote policies that reflect this framework. I support legislation that
-    aligns with the powers listed in the Constitution and I support efforts to review federal
-    programs that fall outside this structure. A clear constitutional foundation helps create
-    a government that is stable, efficient, and respectful of the people who grant it authority.
+    These powers provide both authority and limits. Federal programs should be directly connected to these responsibilities. Areas outside this framework are best handled by states, local communities, or individuals.
   </p>
 </section>
 
-<section class="callout">
-  <strong>The Constitution provides structure and responsibility for federal power.</strong><br>
-  A stable government begins with clear limits and consistent application of the law.
+<section>
+  <h2>Governing with Clear Limits</h2>
+
+  <p>
+    I support legislation that aligns with the powers granted to Congress and I support efforts to review federal programs that fall outside this structure.
+  </p>
+
+  <p>
+    Respecting constitutional limits encourages responsible budgeting, clear priorities, and a stronger focus on national responsibilities such as defense, interstate commerce, and the protection of individual rights.
+  </p>
 </section>
 
 </main>
