--- a/grassroots.html
+++ b/grassroots.html
@@ -27,6 +27,7 @@
     <a href="grassroots.html">Grassroots Campaign</a>
     <a href="twitter.html">Live Updates</a>
     <a href="donate.html">Donate</a>
+	<a href="contact.html">Contact</a>
   </nav>
 </header>
 
@@ -37,16 +38,11 @@
   <h2>Bottom-Up Representation</h2>
 
   <p>
-    This campaign is built on direct involvement from the people who live in the district.
-    I believe representation should grow from the community and reflect the priorities
-    of the residents who experience the results of federal decisions every day.
+    This is a grassroots campaign built on steady involvement from residents of PA-3. Representation works best when it grows from the community and reflects the priorities of the people who experience federal decisions every day.
   </p>
 
   <p>
-    The website is hosted on GitHub to support open participation. Anyone can propose
-    improvements or corrections. Every suggestion is reviewed before it is added.
-    This structure encourages transparency and invites residents to take part in the
-    work of building a stronger district.
+    Every conversation and every connection strengthens the effort to build more responsive representation.
   </p>
 </section>
 
@@ -56,32 +52,50 @@
 </section>
 
 <section>
-  <h2>My Approach to Party Alignment</h2>
+  <h2>Open by Design</h2>
   <p>
-    I consider myself a Constitutionalist. My views do not fit neatly within either
-    major party. To run a community-focused campaign, I need a practical path that
-    allows me to meet the legal requirements for ballot access and reach voters
-    across the district. The Republican ballot line provides that path in this
-    election cycle. My commitment remains centered on the people of the district
-    and on the principles that guide my work.
+    This website is hosted on GitHub to support transparency and public participation.
+  </p>
+  
+  <p>
+	Anyone can propose improvements or corrections. Every suggestion is reviewed before it is added. Nothing appears on this site without consideration and accountability.
+  </p>
+  
+  <p>
+	Transparency is built into the structure of the campaign, not added as an afterthought.
   </p>
 </section>
 
 <section>
-  <h2>How You Can Help</h2>
+  <h2>Participation Matters</h2>
+
   <p>
-    A grassroots campaign depends on steady involvement from residents. Every
-    conversation and every connection strengthens the effort to build a more
-    responsive form of representation.
+	Real political change begins locally. Voting is important, but it is not the only form of civic responsibility.
   </p>
+  
+  <p>
+	Local office shapes state outcomes. State outcomes shape federal outcomes. Progress starts when people step forward rather than waiting for someone else to act.
+  </p>
+  
+  <p>
+	This campaign encourages residents of all political backgrounds to engage, participate, and think independently.
+  </p>
+</section>
+
+<section>
+  <h2>How to Get Involved</h2>
 
   <ul>
     <li>Attend community meetings</li>
     <li>Talk with neighbors about local concerns</li>
     <li>Share ideas or suggestions through the contact page</li>
     <li>Volunteer with local organizations or civic groups</li>
-	<li>Get creative!</li>
+	<li>Bring creativity and initiative</li>
   </ul>
+  
+  <p>
+	This campaign belongs to the community it represents.
+  </p>
 </section>
 
 </main>
