--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     <a href="grassroots.html">Grassroots Campaign</a>
     <a href="twitter.html">Live Updates</a>
     <a href="donate.html">Donate</a>
+	<a href="contact.html">Contact</a>
   </nav>
 </header>
 
@@ -37,77 +38,57 @@
   <h2>The Person Behind @AlexSchnellPA3 on X</h2>
 
   <p>
-    Hello, everyone. I am Alex Schnell, a member of the Philadelphia 9th Ward Republican
-    Committee, and I am exploring a grassroots run for Congress in Pennsylvania’s
-    3rd District. My interest in public service grew from years of community involvement
-    and from a professional background focused on analysis, problem solving, and
-    practical results.
+    Hello, I’m Alex Schnell. I am a member of the Philadelphia 9th Ward Republican Committee and I am exploring a grassroots run for Congress in Pennsylvania’s 3rd District.
   </p>
 
   <p>
-    My interest in technology began early in life through projects I worked on with my
-    father. We built weather stations, created videos with green screen effects, and
-    experimented with robotics and circuitry. These experiences encouraged me to pursue
-    technical work and shaped the way I approach complex problems.
+    My interest in public service grew from years of community involvement and from a professional background centered on analysis, problem solving, and practical results. I believe effective representation requires time spent in the district, clear communication, and an honest understanding of how federal decisions affect daily life.
   </p>
 
   <p>
-    In high school, I assisted with the IT Lab and Lab Manager programs and earned two
-    Microsoft certifications after graduation. During college, I focused on gaining
-    practical experience. I earned a SAS Certificate in Business Intelligence and
-    Analytics and a Leadership Certificate from the Oskin Leadership Institute. I
-    completed internships, including one in the office of my Congressman, and I served
-    as President of Widener’s foreign language honor society and Treasurer of the
-    Catholic club.
+    I currently work as a Business Analyst supporting operations and process improvement through a partnership with the Philadelphia Parking Authority. My work focuses on making systems function more efficiently and responsibly. Those same principles guide how I approach representation.
   </p>
-
-  <p>
-    After college, I spent four years at Breakaway Technologies. When that position
-    ended, I used the skills I had gained to build a custom database for stock market
-    forecasting. I also became more involved in public service and was elected as a
-    local Committeeperson. This role strengthened my interest in government and
-    community engagement and helped shape my decision to explore a run for Congress.
-  </p>
-
-  <p>
-    I currently work as a Business Analyst through a partnership between my company
-    and the Philadelphia Parking Authority. My responsibilities involve improving
-    processes, supporting operations, and helping the organization function
-    efficiently. These experiences have reinforced my belief that effective
-    representation requires clear communication, careful analysis, and consistent
-    engagement with the people you serve.
-  </p>
-
-  <p>
-    I consider myself a Constitutionalist. I value limited government, individual
-    liberty, and accountability. I do not align fully with either major party. I am
-    choosing the path that allows a community-focused campaign to function effectively
-    and reach the people who live here. My goal is to build a campaign that reflects
-    the district and encourages residents to take part in shaping their representation.
-  </p>
-</section>
-
-<section class="callout">
-  <strong>This is a grassroots campaign.</strong><br>
-  This website is hosted on GitHub. Anyone can propose changes.
-  Nothing is added without review. Transparency is built into the structure.
 </section>
 
 <section>
   <h2>Why I Am Running</h2>
 
   <p>
-    Many residents feel that their concerns do not reach Washington. They want a
-    representative who spends time in the district, listens to local voices, and
-    understands the issues that affect daily life. I believe effective representation
-    begins with consistent engagement in the community.
+    Many residents feel that their concerns do not reach Washington. Too often, decisions are made far from the neighborhoods they affect. I believe representation should begin with consistent engagement in the community and with listening before legislating.
   </p>
 
   <p>
-    My goal is to build a campaign that grows from the ground up. Community first.
-    Local involvement. Clear communication. These principles guide my approach and
-    shape the work I hope to do on behalf of the district.
+    Trust in government cannot be demanded. It is built through transparency, accountability, and steady involvement. My goal is to run a campaign that reflects the district and invites residents to take part in shaping their representation.
   </p>
+</section>
+
+<section class="callout">
+  <strong>This is a grassroots campaign.</strong><br>
+  This campaign is community first, local in focus, and grounded in clear communication.
+</section>
+
+<section>
+  <h2>Ballot Access and Party Line</h2>
+  
+  <p>
+	Pennsylvania’s ballot access laws create significant barriers for grassroots and independent candidates. Collecting signatures must happen within a short window, and candidates outside the major parties often face higher thresholds without organizational support.
+  </p>
+  
+  <p>
+	To run a viable, community-focused campaign and meet these legal requirements, I am running on the Republican ballot line in this election cycle. This choice provides a practical path to ballot access and voter outreach in PA-3.
+  </p>
+  
+  <p>
+	My approach remains independent in spirit and in practice. My commitment is to the people of the district and to the principles that guide my work, not to party leadership or political machines.
+  </p>
+</section>  
+  
+<section class="callout">
+  <strong>A Campaign Built by the District</strong><br>
+  This campaign belongs to PA-3.<br>
+  Built openly.<br>
+  Reviewed carefully.<br>
+  Focused on the community.
 </section>
 
 </main>
