--- a/pocketbook.html
+++ b/pocketbook.html
@@ -27,27 +27,16 @@
     <a href="grassroots.html">Grassroots Campaign</a>
     <a href="twitter.html">Live Updates</a>
     <a href="donate.html">Donate</a>
+	<a href="contact.html">Contact</a>
   </nav>
 </header>
 
 <main>
 
 <section>
-  <h2>Issues That Give People Influence</h2>
+  <h2>Pocketbook Items</h2>
   <p>
-    When people ask why I am running for Congress, I explain that this is a
-    grassroots effort. I have never supported the traditional top-down approach to
-    representation. Many residents rarely see their elected officials in the community.
-    Decisions are made in Washington while the concerns of local neighborhoods receive
-    limited attention. I believe representation should begin with regular engagement
-    in the district and with a clear understanding of the daily challenges people face.
-  </p>
-
-  <p>
-    My approach focuses on what I call pocketbook items. These are structural issues
-    that determine how much influence people have in public life. They shape the
-    relationship between citizens and their government and they affect the ability
-    of individuals to participate in the political process.
+    My approach focuses on what I call pocketbook items. These are structural issues that determine how much influence people have in public life. They shape the relationship between citizens and their government and affect the ability of individuals to participate meaningfully in the political process.
   </p>
 </section>
 
@@ -59,59 +48,43 @@
 <section>
   <h2>Term Limits</h2>
   <p>
-    Long political careers weaken the connection between elected officials and the
-    communities they serve. Many people believe that regular turnover strengthens
-    accountability. I support limiting House members to three terms and Senators to
-    two. I also commit to serving no more than three terms in the House. This approach
-    encourages new perspectives and keeps elected officials focused on the people who
-    live in their districts.
+    Long political careers weaken the connection between elected officials and the communities they serve. Regular turnover strengthens accountability and brings new perspectives.
+  </p>
+  
+  <p>
+	I support limiting House members to three terms and Senators to two terms. I also commit to serving no more than three terms in the House.
   </p>
 </section>
 
 <section>
   <h2>Transparency and Accountability</h2>
   <p>
-    Public trust depends on clear and accessible information. Many government records
-    remain sealed for long periods of time, including files related to major historical
-    events and investigations. I support releasing these records, strengthening
-    protections for whistleblowers, and conducting regular audits. Transparency helps
-    the public evaluate government actions and strengthens confidence in our
-    institutions.
+    Public trust depends on clear and accessible information. Many government records remain sealed for decades, including files related to major historical events and investigations.
   </p>
+  
+  <p>
+	I support:
+  </p>
+  
+  <ul>
+    <li>Releasing long-sealed records where appropriate</li>
+    <li>Strengthening protections for whistleblowers</li>
+    <li>Conducting regular audits of federal programs</li>
+  </ul>
+  
+  <p>
+	Transparency allows the public to evaluate government actions and strengthens confidence in our institutions.
+  </p>  
 </section>
 
 <section>
-  <h2>Clean Money in Politics</h2>
+  <h2>Campaign Funding and Local Influence</h2>
   <p>
-    Campaign funding should reflect the interests of the people who live in our district. I support limiting donations to individuals and organizations within
-    the jurisdiction. Large contributions from outside groups reduce the influence of
-    local residents and shift attention away from community needs. Local voices
-    should guide local representation.
+    Campaign funding should reflect the interests of the people who live in the district. I support limiting donations to individuals and organizations within the jurisdiction.
   </p>
-</section>
-
-<section>
-  <h2>Ballot Access and Independent Voters</h2>
+  
   <p>
-    In Pennsylvania, candidates who want to appear on the Primary Election ballot must
-    collect signatures from registered voters during a three-week petition period that
-    usually begins in mid-to-late February. This requirement applies to every candidate,
-    but the impact is very different for those who are not running as Republicans or
-    Democrats. Independent and unaffiliated candidates often need more signatures and
-    do not have the organizational support that major party committees provide. These
-    conditions make it extremely difficult for independent candidates to qualify for
-    the ballot within the short timeframe.
-  </p>
-
-  <p>
-    This situation affects my own path as well. I consider myself a Constitutionalist
-    and I do not align fully with either major party. To run a grassroots campaign that
-    focuses on community involvement, I need a practical route that allows me to meet
-    the legal requirements and reach voters. The Democratic field already includes
-    several candidates, while the Republican field does not. This creates a clearer
-    path for ballot access and community outreach. For this reason, I am running as a
-    Republican in name while maintaining an independent approach in spirit and in
-    practice.
+	Local voices should guide local representation. Large outside contributions shift attention away from community needs and reduce public trust.
   </p>
 </section>
 
