--- a/donate.html
+++ b/donate.html
@@ -19,7 +19,7 @@
 <body>
 
 <header>
-  <h1>Alex Schnell for PA-3</h1>
+  <h1>Contributions</h1>
   <nav>
     <a href="index.html">Home</a>
     <a href="constitution.html">The Constitution</a>
@@ -27,6 +27,7 @@
     <a href="grassroots.html">Grassroots Campaign</a>
     <a href="twitter.html">Live Updates</a>
     <a href="donate.html">Donate</a>
+	<a href="contact.html">Contact</a>
   </nav>
 </header>
 
@@ -44,7 +45,7 @@
   <div class="notice">
     <strong>District Residents Only:</strong>
     Contributions are currently accepted only from individuals whose residential address
-    is within Pennsylvania’s 3rd Congressional District (PA‑3). The form will verify
+    is within Pennsylvania’s 3rd Congressional District (PA-3). The form will verify
     your address and prevent submission if it appears to be outside the district.
   </div>
 
