--- a/pocketbook.html
+++ b/pocketbook.html
@@ -88,6 +88,20 @@
   </p>
 </section>
 
+<section class="legislative-transition">
+  <hr aria-hidden="true">
+  <h3>From Platform to Action</h3>
+  <p>
+    Government works best when it is open to the people it serves. I am making my legislative priorities public now so you can see exactly how I intend to vote and lead.
+  </p>
+  
+  <p>
+    <a href="pdf-viewer.html" class="button-style" target="_blank">
+      Explore my 'Day One' bill drafts &rarr;
+    </a>
+  </p>
+</section>
+
 </main>
 
 <footer>
