Update pdf-viewer.html w/ BBA

--- a/pdf-viewer.html
+++ b/pdf-viewer.html
@@ -35,8 +35,8 @@
                 </a>
             </li>
             <li>
-                <a href="#" class="pdf-link" onclick="loadPDF('documents/doc2.pdf')">
-                    Doc2
+                <a href="#" class="pdf-link" onclick="loadPDF('documents/balanced-budget-amendment.pdf')">
+                    Balanced Budget Amendment
                 </a>
             </li>
             <li>
@@ -67,4 +67,5 @@
     </script>
 
 </body>
+
 </html>
