--- a/pdf-viewer.html
+++ b/pdf-viewer.html
@@ -40,8 +40,18 @@
                 </a>
             </li>
             <li>
-                <a href="#" class="pdf-link" onclick="loadPDF('documents/doc3.pdf')">
-                    Doc3
+                <a href="#" class="pdf-link" onclick="loadPDF('documents/congressional-authorization.pdf')">
+                    Congressional Authorization for Military Actions
+                </a>
+            </li>
+            <li>
+                <a href="#" class="pdf-link" onclick="loadPDF('documents/departmentalism-announcement.pdf')">
+                    Departmentalism
+                </a>
+            </li>
+            <li>
+                <a href="#" class="pdf-link" onclick="loadPDF('documents/doc5.pdf')">
+                    Doc5
                 </a>
             </li>
         </ul>
@@ -69,3 +79,4 @@
 </body>
 
 </html>
+
