--- a/thank-you.html
+++ b/thank-you.html
@@ -14,6 +14,10 @@
   <meta property="og:url" content="https://alexschnellpa3.com/thank-you.html">
   <meta name="twitter:card" content="summary_large_image">
 
+  <!-- Favicons -->
+  <link rel="icon" type="image/png" href="/images/favicon.png">
+  <link rel="apple-touch-icon" href="/images/favicon.png">
+	
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
